fix header spacing

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -53,14 +53,12 @@
 
   .header #logo {
     display: block;
+    text-align: center;
     margin: 12px 0;
   }
 
   .header nav{
-    margin-bottom: 12px;
-  }
-
-  .header nav a:first-child{
-    padding-left: 0 !important;
+    text-align: center;
+    margin-bottom:12px;
   }
 }
