--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -72,6 +72,10 @@
 
   }
 
+  .flexible {
+    width: 100%;
+  }
+
   .gatsby-resp-image-wrapper, img{
     margin: 24px 0;
   }
